@@ -1,5 +1,11 @@
 package de.ids_mannheim.korap.server;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.net.URL;
+import java.util.Properties;
+
+import de.ids_mannheim.korap.config.KustvaktConfiguration;
 import de.ids_mannheim.korap.web.KustvaktBaseServer;
 
 public class KustvaktLiteServer extends KustvaktBaseServer {
@@ -11,6 +17,20 @@ public class KustvaktLiteServer extends KustvaktBaseServer {
 
         if (kargs == null) System.exit(0);
 
+        File f = new File("kustvakt-lite.conf");
+        if (!f.exists()){
+            URL url = KustvaktLiteServer.class.getClassLoader().getResource("kustvakt-lite.conf");
+            if (url!=null){
+                f = new File(url.toURI());
+            }
+        }
+        
+        Properties properties = new Properties();
+        FileInputStream in = new FileInputStream(f);
+        properties.load(in);
+        in.close();
+        config = new KustvaktConfiguration(properties);
+        
         kargs.setSpringConfig("lite-config.xml");
         kargs.setRootPackages(
                 new String[] { "de.ids_mannheim.korap.web.service.lite" });
